#9227 [템플릿 SCSS] _alerts.scss
- _alerts 템플릿 구현 및 적용
- gModal.css 및 관련 import 경로 제거

--- a/src/main/resources/public/src/scss/form/form.scss
+++ b/src/main/resources/public/src/scss/form/form.scss
@@ -13,6 +13,7 @@
 @import '../template/_alignments.scss'; // 상속 불가
 @import '../template/_flex.scss';
 @import '../template/_common.scss'; // 상속 불가
+@import '../template/_alerts.scss';
 @import '../template/_scrollbars.scss';
 @import '../template/_file-uploader.scss';
 @import '../template/_date-picker.scss';
