--- a/src/main/resources/public/src/scss/portal/portal.scss
+++ b/src/main/resources/public/src/scss/portal/portal.scss
@@ -12,6 +12,7 @@
 @import '../template/_mixins.scss'; // 상속 불가
 @import '../template/_alignment.scss'; // 상속 불가
 @import '../template/_common.scss'; // 상속 불가
+@import '../template/_alerts.scss';
 @import '../template/_scrollbars.scss';
 @import '../template/_file-uploader.scss';
 @import '../template/_avatar.scss';
