--- a/src/main/resources/public/src/scss/process/process.scss
+++ b/src/main/resources/public/src/scss/process/process.scss
@@ -13,6 +13,7 @@
 @import '../template/_alignments.scss'; // 상속 불가
 @import '../template/_flex.scss';
 @import '../template/_common.scss'; // 상속 불가
+@import '../template/_alerts.scss';
 @import '../template/_scrollbars.scss';
 @import '_variables.scss';
 @import '_fonts.scss';
