--- a/src/main/resources/public/src/scss/template/_alerts.scss
+++ b/src/main/resources/public/src/scss/template/_alerts.scss
@@ -5,3 +5,180 @@
  * @author jy.lim
  * @version 1.0
  */
+.gmodal {
+  &-active {
+    overflow:hidden !important;
+  }
+
+  &-wrapper {
+    display:none;
+    overflow:auto;
+    position:fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    &.gmodal-active {
+      z-index: 2002;
+      display:block;
+    }
+  }
+
+  &-backdrop{
+    z-index:999999998;
+    position:fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(116, 147, 179, 0.5);
+  }
+
+  &-dialog{
+    z-index:999999999;
+    border: solid 0.0625rem #C8CED8;  // 1px
+    border-radius: 0.0625rem;         // 1px
+    position: absolute;
+    top: 8em;
+    left: 0;
+    right: 0;
+    width: 100%;
+    line-height: 1;
+    max-width: 26.875rem;             // 430px
+    margin: 0 auto 2em auto;
+    box-sizing: border-box;
+    background: #FFFFFF;
+    box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);  // 5px
+    padding: 1.5625rem;                                             // 25px
+  }
+
+  &-close {
+    $close-type: (in, out);
+    @each $type in $close-type {
+      &-#{$type}:hover {
+        opacity:1;
+      }
+      &-#{$type}:before,
+      &-#{$type}:after {
+          position: absolute;
+          left: 0.9375rem;    // 15px
+          content: ' ';
+          height: 2.0625rem;  // 33px
+          width: 0.125rem;    //2px
+      }
+    }
+    &-in:before,
+    &-in:after {
+      background-color: #333333;
+    }
+    &-out:before,
+    &-out:after {
+      background-color: #CCCCCC;
+    }
+    &-in:before,
+    &-out:before {
+      transform: rotate(-45deg);
+    }
+    &-in:after,
+    &-out:after {
+      transform: rotate(45deg);
+    }
+  }
+
+  &-title {
+    padding: 1em;
+    text-align: center;
+    font-size: 1.25em;
+    box-sizing:border-box;
+  }
+
+  &-body {
+    padding: 0 0 0 3.875rem;  // 0 0 0 62px
+    margin-bottom: 2rem;      // 32px
+    overflow: auto;
+    min-height: 3.4375rem;    //55px
+    box-sizing: border-box;
+  }
+
+  &-message {
+    display: flex;
+    align-items: center;
+    min-height: 3.5rem;       // 56px
+    font-size: 1rem;          // 16px
+    font-weight: $font-weight-medium;
+    line-height: 1.7143;
+  }
+
+  &-buttons{
+    box-sizing:border-box;
+    text-align:right;
+  }
+
+  &-button{
+    border: solid 0.0625rem $line-gray;  // 1px
+    margin: 0rem 0rem 0rem 0.3125rem;
+    padding: 0.4375rem 1.5rem;
+    text-align: center;
+    color: #3F4B56;
+    font-size: 1rem;                    // 16px
+    font-weight: $font-weight-medium;
+    text-transform: uppercase;
+    cursor:pointer;
+    display: inline-block;
+    -webkit-border-radius: 0.0625rem;   // 1px
+    -moz-border-radius: 0.0625rem;      // 1px
+    border-radius: 0.0625rem;           // 1px
+    text-decoration: none;
+  }
+
+  &-button {
+    &-red { border: solid 0.0625rem #e51c23; color:#e51c23; }   // 1px
+    &-blue { border: solid 0.0625rem #0050ff; color:#0050ff; }  // 1px
+    &-green { border: solid 0.0625rem #00ca3c; color:#00ca3c; } // 1px
+    &-gray { border: solid 0.0625rem #969696; color:#969696; }  // 1px
+  }
+
+  &-input {
+    width: 100%;
+
+    &-text {
+      width: 100%;
+      padding-left: 0.438rem;
+    }
+
+    &-textarea {
+      width: 100%;
+      min-height: 5.625rem;
+      padding-left: 0.438rem;
+    }
+
+    &-label {
+      display: block;
+      margin: 0.3125rem 0;  // 5px
+    }
+  }
+
+  &-required {
+    display: none;
+    text-align: center;
+    font-size: 1rem;
+    color: #FF405A;
+  }
+}
+
+@media only screen and (max-width:53em){
+  .gmodal-dialog{
+    width: auto;
+    margin: 0 auto 0.3125rem auto;  // 5px
+    top: 0.3125rem;  // 5px
+    right: 0.3125rem;  // 5px
+    left: 0.3125rem;  // 5px
+  }
+}
+@media only screen and (max-width:32em){
+  .gmodal-button{
+    display:block;
+    margin: 0.5em;
+  }
+}
