--- a/src/main/resources/public/src/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/src/scss/theme/default/itsm.scss
@@ -11,6 +11,7 @@
 @import '../../template/_mixins.scss'; // 상속 불가
 @import '../../template/_alignments.scss'; // 상속 불가
 @import '../../template/_common.scss'; // 상속 불가
+@import '../../template/_alerts.scss';
 @import '../../template/_scrollbars.scss';
 @import '../../template/_file-uploader.scss';
 @import '../../template/_avatar.scss';
