--- a/src/main/resources/public/src/scss/template/_alerts.scss
+++ b/src/main/resources/public/src/scss/template/_alerts.scss
@@ -5,6 +5,9 @@
  * @author jy.lim
  * @version 1.0
  */
+$alert-border-size: 0.0625rem;  // 1px
+$alert-margin-size: 0.3125rem;  // 5px
+
 .gmodal {
   &-active {
     overflow: hidden !important;
@@ -37,20 +40,20 @@
 
   &-dialog {
     z-index: 999999999;
-    border: solid 0.0625rem #C8CED8;  // 1px
-    border-radius: 0.0625rem;         // 1px
+    border: solid $alert-border-size #C8CED8;  // 1px
+    border-radius: $alert-border-size;         // 1px
     position: absolute;
     top: 8em;
     left: 0;
     right: 0;
     width: 100%;
     line-height: 1;
-    max-width: 26.875rem;             // 430px
+    max-width: 26.875rem;
     margin: 0 auto 2em auto;
     box-sizing: border-box;
     background: #FFFFFF;
-    box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);  // 5px
-    padding: 1.5625rem;                                             // 25px
+    box-shadow: 0 0 $alert-margin-size $alert-margin-size rgba(116, 147, 179, 0.25);  // 5px
+    padding: 1.5625rem;
   }
 
   &-title {
@@ -83,37 +86,37 @@
   }
 
   &-button {
-    border: solid 0.0625rem $line-gray;  // 1px
-    margin: 0rem 0rem 0rem 0.3125rem;
+    border: solid $alert-border-size $line-gray;  // 1px
+    margin: 0rem 0rem 0rem $alert-margin-size;
     padding: 0.4375rem 1.5rem;
     text-align: center;
     color: #3F4B56;
-    font-size: 1rem;                    // 16px
+    font-size: 1rem;                             // 16px
     font-weight: $font-weight-medium;
     text-transform: uppercase;
     cursor: pointer;
     display: inline-block;
-    -webkit-border-radius: 0.0625rem;   // 1px
-    -moz-border-radius: 0.0625rem;      // 1px
-    border-radius: 0.0625rem;           // 1px
+    -webkit-border-radius: $alert-border-size;   // 1px
+    -moz-border-radius: $alert-border-size;      // 1px
+    border-radius: $alert-border-size;           // 1px
     text-decoration: none;
   }
 
   &-icon {
     &-success {
-      @include background ('#{$icon-folder-path}icon_alert_success.svg', null, no-repeat, 0, 0.3125rem, null); // 5px
+      @include background ('#{$icon-folder-path}icon_alert_success.svg', null, no-repeat, 0, $alert-margin-size, null); // 5px
     }
     &-info {
-      @include background ('#{$icon-folder-path}icon_alert_info.svg', null, no-repeat, 0, 0.3125rem, null);    // 5px
+      @include background ('#{$icon-folder-path}icon_alert_info.svg', null, no-repeat, 0, $alert-margin-size, null);    // 5px
     }
     &-warning {
-      @include background ('#{$icon-folder-path}icon_alert_warning.svg', null, no-repeat, 0, 0.3125rem, null); // 5px
+      @include background ('#{$icon-folder-path}icon_alert_warning.svg', null, no-repeat, 0, $alert-margin-size, null); // 5px
     }
     &-danger {
-      @include background ('#{$icon-folder-path}icon_alert_danger.svg', null, no-repeat, 0, 0.3125rem, null);  // 5px
+      @include background ('#{$icon-folder-path}icon_alert_danger.svg', null, no-repeat, 0, $alert-margin-size, null);  // 5px
     }
     &-confirm {
-      @include background ('#{$icon-folder-path}icon_alert_confirm.svg', null, no-repeat, 0, 0.3125rem, null); // 5px
+      @include background ('#{$icon-folder-path}icon_alert_confirm.svg', null, no-repeat, 0, $alert-margin-size, null); // 5px
     }
   }
   &-no-icon { padding: 0; }
@@ -134,7 +137,7 @@
 
     &-label {
       display: block;
-      margin: 0.3125rem 0;  // 5px
+      margin: $alert-margin-size 0;  // 5px
     }
   }
 
@@ -149,10 +152,10 @@
 @media only screen and (max-width:53em){
   .gmodal-dialog{
     width: auto;
-    margin: 0 auto 0.3125rem auto;  // 5px
-    top: 0.3125rem;  // 5px
-    right: 0.3125rem;  // 5px
-    left: 0.3125rem;  // 5px
+    margin: 0 auto $alert-margin-size auto;  // 5px
+    top: $alert-margin-size;                 // 5px
+    right: $alert-margin-size;               // 5px
+    left: $alert-margin-size;                // 5px
   }
 }
 @media only screen and (max-width:32em){
