#9231 [템플릿 SCSS] _scroll.scss : 화면 적용

--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -165,13 +165,13 @@ $layout-properties-box-shadow:               -0.0625rem 0.9375rem 0.4375rem 0 rg
 
 //////////////////////////////// scrollbar ////////////////////////////////
 // scrollbar 두께
-$scrollbar-thick:                            8px; // 8px
+$scrollbar-thick:                            0.5rem; // 8px
 // element 내부 scrollbar 두께
-$scrollbar-thick-sm:                         4px; // 4px
+$scrollbar-thick-sm:                         0.25rem; // 4px
 // scrollbar 색상
 $scrollbar-color:                            $default-gray;
 // scrollbar 모서리 곡선
-$scrollbar-border-radius:                     8px; // 8px
+$scrollbar-border-radius:                     0.5rem; // 8px
 // scrollbar 배경 색상
 $scrollbar-bg-color:                         rgba(235,235,235, 0.6);
 // scrollbar hover, click 이동시 색상
