--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -37,6 +37,7 @@
             /*[/]*/
             addThumbnailUpload();
             document.getElementById('searchValue').focus();
+            OverlayScrollbars(document.querySelector('.thumbnail-container'), { className: 'scrollbar' });
         }
 
         function addThumbnail(image) {
