--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -153,7 +153,7 @@
             OverlayScrollbars(document.querySelector('.list-body'), { className: 'scrollbar' });
             OverlayScrollbars(document.querySelector('.scroll-wrap'), { className: 'scrollbar' });
             Array.prototype.forEach.call(document.querySelectorAll('.checkbox-list'), function(target) {
-                OverlayScrollbars(target, { className: 'scrollbar' });
+                OverlayScrollbars(target, { className: 'inner-scrollbar' });
             });
         }
 
