--- a/src/main/resources/public/template/sessionInvalid.html
+++ b/src/main/resources/public/template/sessionInvalid.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <link rel="shortcut icon" th:href="@{/assets/media/images/zenius.ico}" type="image/x-icon">
     <link th:href="@{/assets/css/portal.css}" rel="stylesheet"/>
+    <title th:text="#{project.label.name}"></title>
 </head>
 <body>
 <div class="alice-wrapper">
