--- a/src/main/resources/public/template/document/documentAdminSearch.html
+++ b/src/main/resources/public/template/document/documentAdminSearch.html
@@ -185,33 +185,29 @@
 
             let tdDocumentEdit = document.createElement('td');
             tdDocumentEdit.style.width = '10%';
-            let documentEditObject = document.createElement('a');
-            documentEditObject.onclick = function() {
-                if (document.getElementById('updatable').value === 'true') {
+            if (document.getElementById('updatable').value === 'true') {
+                let documentEditBtn = document.createElement('button');
+                let spanDocumentEdit = document.createElement('span');
+                spanDocumentEdit.className = 'icon-edit';
+                documentEditBtn.onclick = function() {
                     openDocumentEdit(data.documentId);
-                } else {
-                    aliceJs.alertWarning(i18n.msg('auth.msg.accessDenied'));
                 }
-            };
-            let documentEditImage = document.createElement('img');
-            documentEditImage.src = '../assets/media/icons/icon_edit.svg';
-            documentEditObject.appendChild(documentEditImage);
-            tdDocumentEdit.appendChild(documentEditObject);
+                documentEditBtn.appendChild(spanDocumentEdit);
+                tdDocumentEdit.appendChild(documentEditBtn);
+            }
 
             let tdDocumentDelete = document.createElement('td');
             tdDocumentDelete.style.width = '10%';
-            let documentDeleteObject = document.createElement('a');
-            documentDeleteObject.onclick = function() {
-                if (document.getElementById('deletable').value === 'true') {
+            if (document.getElementById('deletable').value === 'true') {
+                let documentDeleteBtn = document.createElement('button');
+                let spanDocumentDelete = document.createElement('span');
+                spanDocumentDelete.className = 'icon-delete';
+                documentDeleteBtn.onclick = function() {
                     deleteDocument(data.documentId);
-                } else {
-                    aliceJs.alertWarning(i18n.msg('auth.msg.accessDenied'));
                 }
-            };
-            let documentDeleteImage = document.createElement('img');
-            documentDeleteImage.src = '../assets/media/icons/icon_delete.svg';
-            documentDeleteObject.appendChild(documentDeleteImage);
-            tdDocumentDelete.appendChild(documentDeleteObject);
+                documentDeleteBtn.appendChild(spanDocumentDelete);
+                tdDocumentDelete.appendChild(documentDeleteBtn);
+            }
 
             tr.appendChild(tdDocumentName);
             tr.appendChild(tdDocumentType);
