--- a/src/main/resources/public/src/scss/template/_alerts.scss
+++ b/src/main/resources/public/src/scss/template/_alerts.scss
@@ -5,9 +5,6 @@
  * @author jy.lim
  * @version 1.0
  */
-$alert-border-size: 0.0625rem;  // 1px
-$alert-margin-size: 0.3125rem;  // 5px
-
 .gmodal {
   &-active {
     overflow: hidden !important;
@@ -40,8 +37,8 @@ $alert-margin-size: 0.3125rem;  // 5px
 
   &-dialog {
     z-index: 999999999;
-    border: solid $alert-border-size #C8CED8;  // 1px
-    border-radius: $alert-border-size;         // 1px
+    border: $alert-border;
+    border-radius: $alert-border-size;
     position: absolute;
     top: 8em;
     left: 0;
@@ -50,17 +47,17 @@ $alert-margin-size: 0.3125rem;  // 5px
     line-height: 1;
     max-width: 26.875rem;
     margin: 0 auto 2em auto;
-    box-sizing: border-box;
-    background: #FFFFFF;
-    box-shadow: 0 0 $alert-margin-size $alert-margin-size rgba(116, 147, 179, 0.25);  // 5px
+    box-sizing: $alert-box-sizing;
+    background: $white;
+    box-shadow: $alert-box-shadow;
     padding: 1.5625rem;
   }
 
   &-title {
     padding: 1em;
     text-align: center;
-    font-size: 1.25em;
-    box-sizing: border-box;
+    font-size: $alert-font-size;
+    box-sizing: $alert-box-sizing;
   }
 
   &-body {
@@ -68,30 +65,30 @@ $alert-margin-size: 0.3125rem;  // 5px
     margin-bottom: 2rem;      // 32px
     overflow: auto;
     min-height: 3.4375rem;    //55px
-    box-sizing: border-box;
+    box-sizing: $alert-box-sizing;
   }
 
   &-message {
     display: flex;
     align-items: center;
     min-height: 3.5rem;       // 56px
-    font-size: 1rem;          // 16px
+    font-size: $alert-font-size;
     font-weight: $font-weight-medium;
     line-height: 1.7143;
   }
 
   &-buttons {
-    box-sizing: border-box;
+    box-sizing: $alert-box-sizing;
     text-align: right;
   }
 
   &-button {
-    border: solid $alert-border-size $line-gray;  // 1px
+    border: $alert-border;
     margin: 0rem 0rem 0rem $alert-margin-size;
     padding: 0.4375rem 1.5rem;
     text-align: center;
     color: #3F4B56;
-    font-size: 1rem;                             // 16px
+    font-size: $alert-font-size;
     font-weight: $font-weight-medium;
     text-transform: uppercase;
     cursor: pointer;
@@ -144,7 +141,7 @@ $alert-margin-size: 0.3125rem;  // 5px
   &-required {
     display: none;
     text-align: center;
-    font-size: 1rem;
+    font-size: $alert-font-size;
     color: #FF405A;
   }
 }
