--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -330,3 +330,11 @@ $modal-box-shadow:                           0 0 0.3125rem 0 $line-gray; // ÌùêÎ
 $modal-title-font-size:                      1.5rem; // 24px
 $modal-title-font-color:                     $light-black;
 $modal-title-font-weight:                    $font-weight-medium;
+
+///////////////////////////////// alert //////////////////////////////
+$alert-font-size: 1rem;
+$alert-border-size: 0.0625rem;  // 1px
+$alert-border: solid $alert-border-size $line-gray;  // 1px
+$alert-margin-size: 0.3125rem;  // 5px
+$alert-box-sizing:  border-box;
+$alert-box-shadow: 0 0 $alert-margin-size $alert-margin-size rgba(116, 147, 179, 0.25);
