--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -154,7 +154,7 @@ input, button, select, optgroup, textarea {
   overflow: hidden;
 }
 
-/* _alerts.scss
+/* _alerts.scss 
  *
  * 파일 경로 : template/_alerts.scss
  * @description 알림 모달
@@ -192,7 +192,7 @@ input, button, select, optgroup, textarea {
 
 .gmodal-dialog {
   z-index: 999999999;
-  border: solid 0.0625rem #c8ced8;
+  border: solid 0.0625rem #EBEBEB;
   border-radius: 0.0625rem;
   position: absolute;
   top: 8em;
@@ -203,7 +203,7 @@ input, button, select, optgroup, textarea {
   max-width: 26.875rem;
   margin: 0 auto 2em auto;
   box-sizing: border-box;
-  background: #fff;
+  background: #ffffff;
   box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
   padding: 1.5625rem;
 }
@@ -211,7 +211,7 @@ input, button, select, optgroup, textarea {
 .gmodal-title {
   padding: 1em;
   text-align: center;
-  font-size: 1.25em;
+  font-size: 1rem;
   box-sizing: border-box;
 }
 
@@ -238,11 +238,11 @@ input, button, select, optgroup, textarea {
 }
 
 .gmodal-button {
-  border: solid 0.0625rem #ebebeb;
+  border: solid 0.0625rem #EBEBEB;
   margin: 0rem 0rem 0rem 0.3125rem;
   padding: 0.4375rem 1.5rem;
   text-align: center;
-  color: #3f4b56;
+  color: #3F4B56;
   font-size: 1rem;
   font-weight: 500;
   text-transform: uppercase;
@@ -255,7 +255,7 @@ input, button, select, optgroup, textarea {
 }
 
 .gmodal-icon-success {
-  background-image: url('../media/icons/alert/icon_alert_success.svg');
+  background-image: url("../media/icons/icon_alert_success.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: 0;
@@ -263,71 +263,82 @@ input, button, select, optgroup, textarea {
 }
 
 .gmodal-icon-info {
-  background-image: url('../media/icons/alert/icon_alert_info.svg');
+  background-image: url("../media/icons/icon_alert_info.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: 0;
   background-position-y: 0.3125rem;
 }
+
 .gmodal-icon-warning {
-  background-image: url('../media/icons/alert/icon_alert_warning.svg');
+  background-image: url("../media/icons/icon_alert_warning.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: 0;
   background-position-y: 0.3125rem;
 }
+
 .gmodal-icon-danger {
-  background-image: url('../media/icons/alert/icon_alert_danger.svg');
+  background-image: url("../media/icons/icon_alert_danger.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: 0;
   background-position-y: 0.3125rem;
 }
+
 .gmodal-icon-confirm {
-  background-image: url('../media/icons/alert/icon_alert_confirm.svg');
+  background-image: url("../media/icons/icon_alert_confirm.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: 0;
   background-position-y: 0.3125rem;
 }
+
 .gmodal-no-icon {
   padding: 0;
 }
+
 .gmodal-input {
   width: 100%;
 }
+
 .gmodal-input-text {
   width: 100%;
   padding-left: 0.438rem;
 }
+
 .gmodal-input-textarea {
   width: 100%;
   min-height: 5.625rem;
   padding-left: 0.438rem;
 }
+
 .gmodal-input-label {
   display: block;
   margin: 0.3125rem 0;
 }
+
 .gmodal-required {
   display: none;
   text-align: center;
   font-size: 1rem;
-  color: #ff405a;
+  color: #FF405A;
 }
+
 @media only screen and (max-width: 53em) {
   .gmodal-dialog {
-     width: auto;
-     margin: 0 auto 0.3125rem auto;
-     top: 0.3125rem;
-     right: 0.3125rem;
-     left: 0.3125rem;
+    width: auto;
+    margin: 0 auto 0.3125rem auto;
+    top: 0.3125rem;
+    right: 0.3125rem;
+    left: 0.3125rem;
   }
 }
+
 @media only screen and (max-width: 32em) {
   .gmodal-button {
-     display: block;
-     margin: 0.5em;
+    display: block;
+    margin: 0.5em;
   }
 }
 
@@ -339,12 +350,12 @@ input, button, select, optgroup, textarea {
  * @version 1.0
  */
 .scrollbar > .os-scrollbar-horizontal {
-  right: 10px;
-  height: 12px;
+  right: 0.625rem;
+  height: 0.75rem;
 }
 
 .scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
-  min-width: 30px;
+  min-width: 1.875rem;
 }
 
 .scrollbar > .os-scrollbar-horizontal .os-scrollbar-handle:before {
@@ -353,17 +364,17 @@ input, button, select, optgroup, textarea {
   left: 0;
   right: 0;
   display: block;
-  top: -6px;
-  bottom: -2px;
+  top: -0.375rem;
+  bottom: -0.125rem;
 }
 
 .scrollbar > .os-scrollbar-vertical {
-  bottom: 10px;
-  width: 8px;
+  bottom: 0.625rem;
+  width: 0.5rem;
 }
 
 .scrollbar > .os-scrollbar-vertical > .os-scrollbar-track > .os-scrollbar-handle {
-  min-height: 30px;
+  min-height: 1.875rem;
 }
 
 .scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
@@ -372,13 +383,13 @@ input, button, select, optgroup, textarea {
   top: 0;
   bottom: 0;
   display: block;
-  left: -6px;
-  right: -2px;
+  left: -0.375rem;
+  right: -0.125rem;
 }
 
 .scrollbar > .os-scrollbar-corner {
-  height: 10px;
-  width: 10px;
+  width: 0.625rem;
+  height: 0.625rem;
   background-color: transparent;
 }
 
@@ -389,11 +400,11 @@ input, button, select, optgroup, textarea {
 
 .scrollbar > .os-scrollbar > .os-scrollbar-track {
   background: rgba(235, 235, 235, 0.6);
-  border-radius: 8px;
+  border-radius: 0.5rem;
 }
 
 .scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background: #E1E3E6;
 }
 
@@ -410,7 +421,7 @@ input, button, select, optgroup, textarea {
 }
 
 .scrollbar.os-host-rtl > .os-scrollbar-horizontal {
-  left: 10px;
+  left: 0.625rem;
   right: 0;
 }
 
@@ -428,8 +439,8 @@ input, button, select, optgroup, textarea {
 }
 
 .os-host-rtl.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
-  right: -6px;
-  left: -2px;
+  right: -0.375rem;
+  left: -0.125rem;
 }
 
 .textarea-scroll-wrapper {
@@ -457,12 +468,12 @@ input, button, select, optgroup, textarea {
 }
 
 .inner-scrollbar > .os-scrollbar-horizontal {
-  right: 10px;
-  height: 12px;
+  right: 0.625rem;
+  height: 0.75rem;
 }
 
 .inner-scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
-  min-width: 30px;
+  min-width: 1.875rem;
 }
 
 .inner-scrollbar > .os-scrollbar-horizontal .os-scrollbar-handle:before {
@@ -471,17 +482,17 @@ input, button, select, optgroup, textarea {
   left: 0;
   right: 0;
   display: block;
-  top: -6px;
-  bottom: -2px;
+  top: -0.375rem;
+  bottom: -0.125rem;
 }
 
 .inner-scrollbar > .os-scrollbar-vertical {
-  bottom: 10px;
-  width: 4px;
+  bottom: 0.625rem;
+  width: 0.25rem;
 }
 
 .inner-scrollbar > .os-scrollbar-vertical > .os-scrollbar-track > .os-scrollbar-handle {
-  min-height: 30px;
+  min-height: 1.875rem;
 }
 
 .inner-scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
@@ -490,13 +501,13 @@ input, button, select, optgroup, textarea {
   top: 0;
   bottom: 0;
   display: block;
-  left: -6px;
-  right: -2px;
+  left: -0.375rem;
+  right: -0.125rem;
 }
 
 .inner-scrollbar > .os-scrollbar-corner {
-  height: 10px;
-  width: 10px;
+  width: 0.625rem;
+  height: 0.625rem;
   background-color: transparent;
 }
 
@@ -507,11 +518,11 @@ input, button, select, optgroup, textarea {
 
 .inner-scrollbar > .os-scrollbar > .os-scrollbar-track {
   background: rgba(235, 235, 235, 0.6);
-  border-radius: 8px;
+  border-radius: 0.5rem;
 }
 
 .inner-scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background: #E1E3E6;
 }
 
@@ -528,7 +539,7 @@ input, button, select, optgroup, textarea {
 }
 
 .scrollbar.os-host-rtl > .os-scrollbar-horizontal {
-  left: 10px;
+  left: 0.625rem;
   right: 0;
 }
 
@@ -546,8 +557,31 @@ input, button, select, optgroup, textarea {
 }
 
 .os-host-rtl.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
-  right: -6px;
-  left: -2px;
+  right: -0.375rem;
+  left: -0.125rem;
+}
+
+.ql-container .ql-editor::-webkit-scrollbar-track {
+  background-color: rgba(235, 235, 235, 0.6);
+  border-radius: 0.5rem;
+}
+
+.ql-container .ql-editor::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: transparent;
+}
+
+.ql-container .ql-editor::-webkit-scrollbar-thumb {
+  background-color: #E1E3E6;
+  border-radius: 0.5rem;
+}
+
+.ql-container .ql-editor::-webkit-scrollbar-thumb:hover {
+  background-color: #CCCED1;
+}
+
+.ql-container .ql-editor::-webkit-scrollbar-thumb:active {
+  background-color: #CCCED1;
 }
 
 /* _file-uploader.scss 
