#9258 페이지 제목 부분 border-bottom

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4190,6 +4190,7 @@ span.vertical-bar {
 
 .container .contents-token.dashboard .header.dashboard {
   padding-bottom: 2.875rem;
+  border-bottom: $line-gray solid 0.0625rem;
   background: #F7F8F9;
 }
 
