--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
@@ -95,6 +95,7 @@
         background: $white;
         .header.dashboard{
             padding-bottom: 2.875rem;
+            border-bottom: $line-gray solid 0.0625rem;
             background: $light-gray;
         }
 
