--- a/src/main/resources/public/src/scss/portal/_faq.scss
+++ b/src/main/resources/public/src/scss/portal/_faq.scss
@@ -2,8 +2,8 @@
     &-faq {
         &-container {
             height: 15rem; // 240px
-            background-color: $line-gray;
             padding: 0 0 0 12.75rem; // 204px
+            background-color: $light-gray;
             border-bottom: 0.0625rem solid $line-gray; // 1px
 
             .page-title {
