--- a/src/main/resources/public/src/scss/portal/_search.scss
+++ b/src/main/resources/public/src/scss/portal/_search.scss
@@ -24,8 +24,7 @@
     &-search {
         &-main {
             height: 6.5rem; // 104px
-            background-color: $line-gray;
-            border-bottom: 0.0625rem solid $line-gray; // 1px
+            background-color: $light-gray;
             .title {
                 text-align: center;
                 padding: 3.625rem 0 0.625rem 0; // 58px 0px 10px 0px
@@ -34,7 +33,7 @@
 
         &-area {
             height: 8.5rem; // 136px
-            background-color: $line-gray;
+            background-color: $light-gray;
             border-bottom: 0.0625rem solid $line-gray; // 1px
             padding: 3rem 0 3rem 0;
             text-align: center;
@@ -45,8 +44,8 @@
 
         &-container {
             height: 15rem; // 240px
-            background-color: $line-gray;
             padding: 0 0 0 12.75rem; // 204px
+            background-color: $light-gray;
             border-bottom: 0.0625rem solid $line-gray; // 1px
 
             .page-title {
