#9247 [리팩토링] 쿼리 - 사용자목록
- 사용자 목록을 조회 시 부서코드를 가져오는 부분을 수정 했습니다.

--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -43,7 +43,7 @@
             const searchOpt = {
                 search: document.getElementById('search').value.trim()
             }
-            let urlParam = 'category=all&search=' + searchOpt.search;
+            let urlParam = 'search=' + searchOpt.search;
             if (isScroll) {
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
