#9258 페이지 제목 부분 border-bottom
- itsm 디자인 수정

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3930,6 +3930,7 @@ span.vertical-bar {
 .container-popup .header {
   padding: 2.875rem 3.75rem 2.875rem 3.75rem;
   background: #F7F8F9;
+  border-bottom: 0.0625rem solid #ebebeb;
 }
 
 .container-popup .view {
@@ -3962,6 +3963,7 @@ span.vertical-bar {
 .container-popup .header {
   padding: 2.875rem 3.75rem 2.875rem 3.75rem;
   background: #F7F8F9;
+  border-bottom: 0.0625rem solid #ebebeb;
 }
 
 .container-popup .edit {
@@ -4084,6 +4086,7 @@ span.vertical-bar {
 
 .container .contents-token .search-area {
   padding: 1.875rem 3.75rem 1.875rem 3.75rem;
+  border-bottom: 0.0625rem solid #ebebeb;
   height: 6.25rem;
 }
 
@@ -4399,7 +4402,8 @@ span.vertical-bar {
 
 .container .contents-edit .header {
   padding: 2.875rem 3.75rem 2.875rem 3.75rem;
-  background: #F7F8F9;
+  background-color: #f7f8f9;
+  border-bottom: 0.0625rem solid #ebebeb;
 }
 
 .container .contents-edit .edit {
@@ -4577,6 +4581,7 @@ span.vertical-bar {
 .container .contents-view .header {
   padding: 2.875rem 3.75rem 2.875rem 3.75rem;
   background: #F7F8F9;
+  border-bottom: 0.0625rem solid #ebebeb;
 }
 
 .container .contents-view .view {
@@ -4616,6 +4621,7 @@ span.vertical-bar {
 .container .contents-flex .header {
   padding: 2.875rem 3.75rem 2.875rem 3.75rem;
   background: #F7F8F9;
+  border-bottom: 0.0625rem solid #ebebeb;
 }
 
 .container .contents-flex .flex {
@@ -4795,6 +4801,8 @@ span.vertical-bar {
 
 .container .contents-document .header {
   padding: 2.875rem 3.75rem 0.625rem 3.75rem;
+  background-color: #f7f8f9;
+  border-bottom: 0.0625rem solid #ebebeb;
 }
 
 .container .contents-document .service-request {
@@ -4993,7 +5001,7 @@ span.vertical-bar {
   justify-content: space-between;
 }
 
-.container .contents-tree-edit > .edit-area .form-row .column-2 {
+.container .contents-tree-edit > .edit-area .form-row .form-div {
   width: 49%;
 }
 
