--- a/src/main/resources/public/src/scss/template/_layout.scss
+++ b/src/main/resources/public/src/scss/template/_layout.scss
@@ -5,8 +5,6 @@
  * @author jy.lim
  * @version 1.0
  */
-$properties-box-shadow: -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6);// -1px 15px 7px 0px $pressed-gray, 불투명도 60%;
-
 .alice-wrapper {
   display: flex;
   max-width: 120rem;
@@ -34,7 +32,7 @@ $properties-box-shadow: -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6
   width: 18.75rem;
   height: $layout-properties-height;
   min-height: $layout-properties-height;
-  box-shadow: $layout-properties-box-shadow;
+  box-shadow: -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6);  // -1px 15px 7px 0px $pressed-gray, 불투명도 60%;
   overflow-y: auto;
 }
 
