--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-tree-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-tree-edit.scss
@@ -36,7 +36,7 @@
             display: flex;
             flex-flow: row wrap;
             justify-content: space-between;
-            .column-2 {
+            .form-div {
                 width: 49%;
             }
         }
