--- a/src/main/resources/public/src/scss/theme/default/_mixin.scss
+++ b/src/main/resources/public/src/scss/theme/default/_mixin.scss
@@ -43,7 +43,11 @@
 }
 
 @mixin content-header() {
-    .header { padding: 2.875rem 3.75rem 2.875rem 3.75rem; background: $light-gray;} // 46px 60px 46px 60px
+    .header {
+        padding: 2.875rem 3.75rem 2.875rem 3.75rem; // 46px 60px 46px 60px
+        background: $light-gray;
+        border-bottom: 0.0625rem solid $line-gray;
+    }
 }
 
 @mixin list-template() {
