#8962 [역할관리] 일괄 권한 선택 또는 권한 검색 기능

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4806,6 +4806,11 @@ span.vertical-bar {
   height: 1.5rem;
 }
 
+.container .contents-list-edit > .edit-area .form-set .checkbox-all {
+  display: table-cell;
+  padding-top: 0.3125rem;
+}
+
 .container .contents-list-edit > .edit-area .form-set .checkbox-list {
   height: 13.5rem;
   border: 0.0625rem solid #EBEBEB;
