--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -199,6 +199,7 @@
                 },
             };
             aliceJs.sendXhr(opt);
+            document.getElementById('selectAll').checked = false;
             OverlayScrollbars(document.querySelector('.scroll-wrap'), { className: 'scrollbar' });
             Array.prototype.forEach.call(document.querySelectorAll('.checkbox-list'), function(target) {
                 OverlayScrollbars(target, { className: 'inner-scrollbar' });
@@ -221,6 +222,7 @@
             document.getElementById('txtRoleId').removeAttribute('disabled');
             document.getElementById('txtRoleName').value = '';
             document.getElementById('txtRoleDesc').value = '';
+            document.getElementById('selectAll').checked = false;
             let roleAuths = document.getElementsByName('roleAuth');
             for(let i = 0; i < roleAuths.length; i++) {
                 roleAuths[i].checked = false;
